# ClawTourism

./: .gitignore  CHANGELOG.md  IDEA.md  README.md  SKILL.md  pyproject.toml
clawtourism/: __init__.py  __main__.py  accommodation.py  airbnb.py  assembler.py  briefing.py  currency.py  day_planner.py  destination.py  experiences.py  extractor.py  flight_monitor.py  flight_status_cli.py  flights.py  foursquare.py  gap_detector.py  models.py  packing.py  packing_profile.py  pdf_extractor.py  places.py  pre_trip.py  renderer.py  resy_alerts.py  scanner.py  store.py  transfers.py  visa_check.py  weather.py
tests/: test_accommodation.py  test_airbnb.py  test_currency.py  test_destination.py  test_experiences.py  test_extractor.py  test_flight_status_cli.py  test_flights.py  test_foursquare.py  test_places.py
