[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "clawtourism"
version = "0.1.0"
description = "From confirmation email to curated itinerary — automatically"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "yhyatt"}]
requires-python = ">=3.10"
keywords = ["openclaw", "travel", "trips", "flights", "itinerary", "packing", "visa"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    # pdfplumber removed — native OpenClaw `pdf` tool used in agent context
    # pypdf kept as lightweight fallback for non-agent (batch scanner) path
    "pypdf>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff", "mypy"]

[project.scripts]
clawtourism = "clawtourism.__main__:main"

[project.urls]
Homepage = "https://github.com/yhyatt/ClawTourism"
Repository = "https://github.com/yhyatt/ClawTourism"

[tool.setuptools.packages.find]
where = ["."]
include = ["clawtourism*"]
